--- a/daili2.yaml
+++ b/daili2.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  port: 30003
   type: ss
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 30003
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 6.44
-  maximum: 9.87
-  average: 8.22
-  UpdateDay: '2022-05-05T21:30:28.126627'
+  minimum: 7.04
+  maximum: 8.17
+  average: 7.42
+  UpdateDay: '2022-05-06T00:30:31.650159'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 34437
+  Rank: 34538
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -55,40 +55,41 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 10.2
-  maximum: 20.28
-  average: 15.51
-  UpdateDay: '2022-05-05T09:30:29.681251'
+  minimum: 6.33
+  maximum: 16.42
+  average: 10.2
+  UpdateDay: '2022-05-06T00:30:31.667090'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 31047
+  Rank: 31148
 - name: 101.91.121.247:50004@ss
-  type: ss
   server: 101.91.121.247
+  type: ss
+  country: "\U0001F1E8\U0001F1F3CN"
   port: 50004
-  cipher: aes-256-cfb
   password: '4415934295'
+  cipher: aes-256-cfb
   success_rate: 100.0
-  minimum: 10.24
-  maximum: 12.01
-  average: 10.84
-  UpdateDay: '2022-05-05T21:30:28.166468'
+  minimum: 9.15
+  maximum: 10.45
+  average: 9.96
+  UpdateDay: '2022-05-06T00:30:31.660448'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 26659
+  Rank: 26751
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
-  port: 1443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 1443
   password: 7x42LetRa0
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 64.37
-  maximum: 94.96
-  average: 77.07
-  UpdateDay: '2022-05-05T21:30:29.460967'
+  minimum: 61.31
+  maximum: 100.63
+  average: 83.12
+  UpdateDay: '2022-05-06T00:30:38.904407'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 23086
+  Rank: 23157
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
   port: 21089
@@ -98,12 +99,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.47
-  maximum: 46.72
-  average: 43.96
-  UpdateDay: '2022-05-05T21:30:28.269987'
+  minimum: 12.63
+  maximum: 40.61
+  average: 30.95
+  UpdateDay: '2022-05-06T00:32:05.432979'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 19887
+  Rank: 19984
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -116,22 +117,22 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 19239
+  Rank: 19329
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
-  port: 20089
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 20089
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 12.98
-  maximum: 52.79
-  average: 34.93
-  UpdateDay: '2022-05-05T21:30:28.251673'
+  minimum: 36.52
+  maximum: 53.62
+  average: 42.45
+  UpdateDay: '2022-05-06T00:30:31.739725'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 17304
+  Rank: 17400
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
   port: 443
@@ -141,42 +142,42 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 72.92
-  maximum: 80.73
-  average: 77.26
-  UpdateDay: '2022-05-05T21:30:29.440782'
+  minimum: 55.98
+  maximum: 58.8
+  average: 57.2
+  UpdateDay: '2022-05-06T00:32:06.028394'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 17255
+  Rank: 17313
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
   type: trojan
   country: "\U0001F1F9\U0001F1FC TW"
-  password: 7a9a3bb7-43b4YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
+  password: YWVzLTI1Ni1nY206eHBRd3lWNFc1RmRBNk5NQU5KSng3M1VT
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 73.56
-  maximum: 75.07
-  average: 74.53
-  UpdateDay: '2022-05-05T21:30:31.555126'
+  minimum: 74.72
+  maximum: 87.05
+  average: 78.94
+  UpdateDay: '2022-05-06T00:32:06.126830'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 16857
+  Rank: 16909
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
   type: trojan
   country: "\U0001F1E8\U0001F1F3 CN"
-  password: SfobRIcergHchqBFzzua
+  password: UiLPqefVfielqkDjEwBV
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 42.66
-  maximum: 54.43
-  average: 48.27
-  UpdateDay: '2022-05-05T21:30:28.270786'
+  minimum: 40.12
+  maximum: 47.6
+  average: 43.79
+  UpdateDay: '2022-05-06T00:32:05.472107'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 11150
+  Rank: 11200
 - alterId: 0
   cipher: auto
   http-opts:
@@ -201,7 +202,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 10735
+  Rank: 10785
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   port: 443
@@ -211,12 +212,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 38.45
-  maximum: 46.6
-  average: 41.24
-  UpdateDay: '2022-05-05T21:30:29.279569'
+  minimum: 38.35
+  maximum: 45.6
+  average: 41.11
+  UpdateDay: '2022-05-06T00:32:05.978354'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 10677
+  Rank: 10755
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
   port: 443
@@ -226,12 +227,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 44.46
-  maximum: 55.17
-  average: 49.2
-  UpdateDay: '2022-05-05T21:30:31.764018'
+  minimum: 36.69
+  maximum: 47.9
+  average: 40.58
+  UpdateDay: '2022-05-06T00:32:06.019440'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 10235
+  Rank: 10328
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -246,7 +247,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 9778
+  Rank: 9868
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -258,7 +259,7 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 9601
+  Rank: 9686
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -270,22 +271,22 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 9567
+  Rank: 9667
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
   port: 443
   type: trojan
   country: "\U0001F1FA\U0001F1F8 US"
-  password: a3fa58b581353bb375d2ddad0f327938
+  password: 28d98f761aca9d636f44db62544628eb
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 186.11
-  maximum: 268.06
-  average: 225.16
-  UpdateDay: '2022-05-05T21:30:32.237462'
+  minimum: 183.99
+  maximum: 203.35
+  average: 195.68
+  UpdateDay: '2022-05-06T00:32:06.498714'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 8362
+  Rank: 8405
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -300,7 +301,7 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 8031
+  Rank: 8081
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -315,22 +316,22 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 7362
+  Rank: 7447
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
-  port: 443
   type: trojan
-  country: "\U0001F1ED\U0001F1F0 HK"
-  password: 5a3d9b78-cb5b-11ea-82ef-f23c9164ca5d
+  country: "\U0001F1ED\U0001F1F0HK"
+  port: 443
+  password: 5c7b33c6-6d83-11eb-b77b-f23c913c8d2b
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 43.36
-  maximum: 63.26
-  average: 52.95
-  UpdateDay: '2022-05-05T21:30:29.306515'
+  minimum: 39.67
+  maximum: 87.81
+  average: 56.04
+  UpdateDay: '2022-05-06T00:30:34.964721'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 6873
+  Rank: 6895
 proxy-groups:
 - name: PG-default
   type: fallback
