--- a/daili2.yaml
+++ b/daili2.yaml
@@ -35,18 +35,18 @@ dns:
 proxies:
 - name: 101.132.192.212:30003@ss
   server: 101.132.192.212
-  port: 30003
   type: ss
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 30003
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 7.71
-  maximum: 8.3
-  average: 7.93
-  UpdateDay: '2022-05-06T09:32:03.501204'
+  minimum: 6.3
+  maximum: 9.17
+  average: 7.51
+  UpdateDay: '2022-05-06T12:30:26.254584'
   PFirstFoundDay: '2022-03-13T18:26:52.937942'
-  Rank: 35624
+  Rank: 35725
 - name: music.desperadoj.com:30003@ss
   server: music.desperadoj.com
   type: ss
@@ -55,56 +55,56 @@ proxies:
   password: desperadoj.com_free_proxy_d39m
   cipher: aes-128-gcm
   success_rate: 100.0
-  minimum: 13.39
-  maximum: 15.98
-  average: 14.4
-  UpdateDay: '2022-05-06T09:30:29.788105'
+  minimum: 7.37
+  maximum: 13.91
+  average: 10.6
+  UpdateDay: '2022-05-06T12:30:26.299131'
   PFirstFoundDay: '2022-03-14T10:17:16.436055'
-  Rank: 32250
+  Rank: 32351
 - name: 101.91.121.247:50004@ss
   server: 101.91.121.247
-  type: ss
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 50004
+  type: ss
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: '4415934295'
   cipher: aes-256-cfb
   success_rate: 100.0
-  minimum: 10.24
-  maximum: 13.04
-  average: 11.39
-  UpdateDay: '2022-05-06T09:30:29.756038'
+  minimum: 10.23
+  maximum: 11.07
+  average: 10.58
+  UpdateDay: '2022-05-06T12:32:00.148382'
   PFirstFoundDay: '2022-03-11T23:29:04.876882'
-  Rank: 27840
+  Rank: 27942
 - name: 106.180.225.69:1443@trojan
   server: 106.180.225.69
-  type: trojan
-  country: "\U0001F1EF\U0001F1F5JP"
   port: 1443
+  type: trojan
+  country: "\U0001F1EF\U0001F1F5 JP"
   password: 7x42LetRa0
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 59.14
-  maximum: 60.06
-  average: 59.46
-  UpdateDay: '2022-05-06T09:30:37.417774'
+  minimum: 59.64
+  maximum: 70.23
+  average: 65.2
+  UpdateDay: '2022-05-06T12:32:00.419959'
   PFirstFoundDay: '2022-03-11T23:05:01.549769'
-  Rank: 24014
+  Rank: 24081
 - name: hk-hkg-sh-hk-02-tr.cdn.savoy.click:21089@trojan
   server: hk-hkg-sh-hk-02-tr.cdn.savoy.click
-  type: trojan
-  country: "\U0001F1E8\U0001F1F3CN"
   port: 21089
+  type: trojan
+  country: "\U0001F1E8\U0001F1F3 CN"
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 37.03
-  maximum: 524.87
-  average: 204.81
-  UpdateDay: '2022-05-06T09:30:30.351329'
+  minimum: 18.8
+  maximum: 38.47
+  average: 31.72
+  UpdateDay: '2022-05-06T12:32:00.246598'
   PFirstFoundDay: '2022-03-13T18:25:41.957547'
-  Rank: 21023
+  Rank: 21125
 - name: fkgfw-prod.i.sxl.cn:443@ss
   server: fkgfw-prod.i.sxl.cn
   port: 443
@@ -117,37 +117,37 @@ proxies:
   average: 89.1
   UpdateDay: '2022-03-24T18:35:12.668742'
   PFirstFoundDay: '2022-03-19T12:33:06.851449'
-  Rank: 20271
+  Rank: 20341
 - name: hk-hkg-shhk-001-tr.cdn.savoy.click:20089@trojan
   server: hk-hkg-shhk-001-tr.cdn.savoy.click
-  port: 20089
   type: trojan
-  country: "\U0001F1E8\U0001F1F3 CN"
+  country: "\U0001F1E8\U0001F1F3CN"
+  port: 20089
   password: SfobRIcergHchqBFzzua
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.35
-  maximum: 47.0
-  average: 43.38
-  UpdateDay: '2022-05-06T09:32:03.618071'
+  minimum: 36.8
+  maximum: 48.42
+  average: 41.33
+  UpdateDay: '2022-05-06T12:30:26.400460'
   PFirstFoundDay: '2022-03-13T18:26:01.142104'
-  Rank: 18430
+  Rank: 18531
 - name: 210.152.13.168:443@trojan
   server: 210.152.13.168
-  port: 443
   type: trojan
-  country: "\U0001F1EF\U0001F1F5 JP"
+  country: "\U0001F1EF\U0001F1F5JP"
+  port: 443
   password: 18e513fe-f7f4-353d-84ca-bc9646fb2528mielink
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 51.87
-  maximum: 58.77
-  average: 54.19
-  UpdateDay: '2022-05-06T09:32:03.702493'
+  minimum: 65.45
+  maximum: 85.37
+  average: 77.47
+  UpdateDay: '2022-05-06T12:30:33.400867'
   PFirstFoundDay: '2022-03-21T15:31:51.301146'
-  Rank: 18254
+  Rank: 18295
 - name: 2.58.242.43:443@trojan
   server: 2.58.242.43
   port: 443
@@ -157,12 +157,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 87.1
-  maximum: 106.99
-  average: 94.66
-  UpdateDay: '2022-05-06T09:32:03.988720'
+  minimum: 89.64
+  maximum: 96.37
+  average: 92.41
+  UpdateDay: '2022-05-06T12:32:01.484901'
   PFirstFoundDay: '2022-03-14T21:36:22.498526'
-  Rank: 17403
+  Rank: 17435
 - name: www.zx07.top:443@trojan
   server: www.zx07.top
   type: trojan
@@ -172,42 +172,42 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 44.17
-  maximum: 48.16
-  average: 45.83
-  UpdateDay: '2022-05-06T09:30:33.574388'
+  minimum: 43.1
+  maximum: 47.76
+  average: 45.8
+  UpdateDay: '2022-05-06T12:30:29.576743'
   PFirstFoundDay: '2022-03-13T18:24:17.598383'
-  Rank: 11812
+  Rank: 11904
 - name: jp-tyo-04-tr.cdn.savoy.click:889@trojan
   server: jp-tyo-04-tr.cdn.savoy.click
   port: 889
   type: trojan
   country: "\U0001F1E8\U0001F1F3 CN"
-  password: SfobRIcergHchqBFzzua
+  password: UiLPqefVfielqkDjEwBV
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 40.74
-  maximum: 51.19
-  average: 46.35
-  UpdateDay: '2022-05-06T09:32:03.620116'
+  minimum: 41.4
+  maximum: 52.12
+  average: 46.01
+  UpdateDay: '2022-05-06T12:32:00.286640'
   PFirstFoundDay: '2022-03-20T12:36:16.101193'
-  Rank: 11709
+  Rank: 11761
 - name: www.tokyo2023.ga:443@trojan
   server: www.tokyo2023.ga
-  type: trojan
-  country: "\U0001F1FA\U0001F1F8US"
   port: 443
+  type: trojan
+  country: "\U0001F1FA\U0001F1F8 US"
   password: 4f7dc540-d244-4e64-af21-4b5bb300add3
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 54.79
-  maximum: 69.25
-  average: 61.26
-  UpdateDay: '2022-05-06T09:31:27.910534'
+  minimum: 48.42
+  maximum: 60.65
+  average: 55.29
+  UpdateDay: '2022-05-06T12:32:01.476913'
   PFirstFoundDay: '2022-03-14T10:29:40.191643'
-  Rank: 11327
+  Rank: 11414
 - alterId: 0
   cipher: auto
   http-opts:
@@ -232,7 +232,7 @@ proxies:
   average: 236.71
   UpdateDay: '2022-03-21T00:35:16.437700'
   PFirstFoundDay: '2022-03-14T10:30:07.032005'
-  Rank: 11295
+  Rank: 11301
 - name: www.gomacau.gq:443@trojan
   server: www.gomacau.gq
   type: trojan
@@ -247,7 +247,7 @@ proxies:
   average: 61.31
   UpdateDay: '2022-04-02T15:35:09.325376'
   PFirstFoundDay: '2022-03-14T10:28:14.224892'
-  Rank: 10968
+  Rank: 11068
 - name: www.ggchk.ga:443@trojan
   password: 4ae98d26-b209-4dd5-8e91-bf11d4f10801
   port: 443
@@ -259,7 +259,7 @@ proxies:
   average: 56.06
   UpdateDay: '2022-04-03T15:12:54.456600'
   PFirstFoundDay: '2022-03-11T21:04:39.779731'
-  Rank: 10749
+  Rank: 10849
 - name: www.seetheworldjp.ga:443@trojan
   password: f42e1a2e-e650-44f4-8d17-bcb68663da18
   port: 443
@@ -271,22 +271,22 @@ proxies:
   average: 57.86
   UpdateDay: '2022-04-03T15:12:54.472724'
   PFirstFoundDay: '2022-03-11T21:01:49.367854'
-  Rank: 10676
+  Rank: 10756
 - name: 72.167.45.6:443@trojan
   server: 72.167.45.6
-  port: 443
   type: trojan
-  country: "\U0001F1FA\U0001F1F8 US"
-  password: 28d98f761aca9d636f44db62544628eb
+  country: "\U0001F1FA\U0001F1F8US"
+  port: 443
+  password: a3fa58b581353bb375d2ddad0f327938
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 178.42
-  maximum: 205.32
-  average: 192.98
-  UpdateDay: '2022-05-06T09:32:04.402657'
+  minimum: 166.0
+  maximum: 171.76
+  average: 169.71
+  UpdateDay: '2022-05-06T12:31:24.579379'
   PFirstFoundDay: '2022-03-31T09:34:10.783687'
-  Rank: 8946
+  Rank: 8995
 - name: 45.9.10.103:443@trojan
   server: 45.9.10.103
   type: trojan
@@ -301,7 +301,7 @@ proxies:
   average: 162.13
   UpdateDay: '2022-03-30T11:21:53.634848'
   PFirstFoundDay: '2022-03-23T09:35:36.105483'
-  Rank: 8613
+  Rank: 8661
 - name: www.tokyo2021.ga:443@trojan
   server: www.tokyo2021.ga
   type: trojan
@@ -316,7 +316,7 @@ proxies:
   average: 41.15
   UpdateDay: '2022-04-02T15:34:32.686241'
   PFirstFoundDay: '2022-03-14T10:28:27.050426'
-  Rank: 8528
+  Rank: 8628
 - name: ssl.tcpbbr.net:443@trojan
   server: ssl.tcpbbr.net
   port: 443
@@ -326,12 +326,12 @@ proxies:
   skip-cert-verify: true
   udp: true
   success_rate: 100.0
-  minimum: 39.04
-  maximum: 40.34
-  average: 39.63
-  UpdateDay: '2022-05-06T09:32:03.627120'
+  minimum: 39.44
+  maximum: 49.58
+  average: 43.01
+  UpdateDay: '2022-05-06T12:32:00.350674'
   PFirstFoundDay: '2022-03-27T06:36:10.059372'
-  Rank: 7673
+  Rank: 7750
 proxy-groups:
 - name: PG-default
   type: fallback
